# entservices-apis

./: CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  batch_bash.sh  governance.md
.github/: CODEOWNERS
.github/Patches/: 00010-R4.4-Add-support-for-project-dir.patch
.github/workflows/: Build_entservices-apis_on_Ubuntu.yml  Build_rdkservices-apis_on_Ubuntu.yml  Validate_Interface_headers.yml  Validate_Interface_headers_incremental.yml  auto_pr_creation_target_repo_caller.yml  component-release.yml  validate_interface_headers.py  validate_interface_headers_incremental.py
apis/: Ids.h  common.json
apis/AVInput/: IAVInput.h
apis/AmazonPrime/: IAmazonPrime.h
apis/Analytics/: IAnalytics.h
apis/AppManager/: IAppManager.h
apis/DeviceDiagnostics/: IDeviceDiagnostics.h
apis/DeviceIdentification/: DeviceIdentification.json
apis/DeviceInfo/: DeviceInfo.json  IDeviceInfo.h  IFirmwareVersion.h
apis/DeviceProvisioning/: IDeviceProvisioning.h  IProvisioning.h
apis/DeviceSettingsManager/: IDeviceSettingsManager.h
apis/DisplayInfo/: IConfiguration.h  IDisplayInfo.h
apis/FirmwareUpdate/: IFirmwareUpdate.h
apis/FrameRate/: IFrameRate.h
apis/FrontPanel/: IFrontPanel.h
apis/HdcpProfile/: IHdcpProfile.h
apis/HdmiCecSink/: IHdmiCecSink.h
apis/HdmiCecSource/: IHdmiCecSource.h
apis/HomeKitTV/: HomeKitTV.json  IHomeKitTV.h
apis/LEDControl/: ILEDControl.h
apis/LISA/: ILISA.h  LISA.json
apis/LifecycleManager/: ILifecycleManager.h  ILifecycleManagerRuntime.h  ILifecycleManagerState.h  ILifecycleManagerStateHook.h
apis/LinearPlaybackControl/: LinearPlaybackControl.json
apis/MessageControl/: IMessageControl.h
apis/Miracast/: IMiracastPlayer.h  IMiracastService.h
apis/Monitor/: Monitor.json
apis/NativeJS/: INativeJS.h
apis/Netflix/: INetflix.h  Netflix.json
apis/OCIContainer/: IOCIContainer.h
apis/OpenCDMi/: IContentDecryption.h  IDRM.h  IOCDM.h  OCDM.json
apis/PackageManager/: IAppPackageManager.h  README.md
apis/PersistentStore/: IStore.h  IStore2.h  IStoreCache.h  PersistentStore.json
apis/PlayerInfo/: IDolby.h  IPlayerInfo.h  PlayerInfo.json
apis/PowerManager/: IPowerManager.h
apis/RDKWindowManager/: IRDKWindowManager.h
apis/RuntimeManager/: IRuntimeManager.h
apis/ScreenCapture/: IScreenCapture.h
apis/SharedStorage/: ISharedStorage.h
apis/StateControl/: StateControl.json
apis/StorageManager/: IStorageManager.h
apis/SystemAudioPlayer/: ISystemAudioPlayer.h
apis/SystemMode/: IDeviceOptimizeStateActivator.h  ISystemMode.h
apis/SystemServices/: ISystemServices.h
apis/Telemetry/: ITelemetry.h
apis/TextToSpeech/: ITextToSpeech.h
apis/TextTrack/: ITextTrack.h
apis/TraceControl/: TraceControl.json
apis/USBDevice/: IUSBDevice.h
apis/USBMassStorage/: IUSBMassStorage.h
apis/UserSettings/: IUserSettings.h
apis/Warehouse/: IWarehouse.h
apis/WebKitBrowser/: Browser.json  CookieJar.json  IBrowser.h  WebKitBrowser.json
apis/XCast/: IXCast.h  XCast.json
apis/wpeframework-clientlibraries/: IComposition.h
docs/: README.md  _coverpage.md  _sidebar.md  homepage.md  index.html
docs/apis/: AVInputPlugin.md  AmazonPrimePlugin.md  AnalyticsPlugin.md  AppManagerPlugin.md  AppPackageManagerPlugin.md  ApplicationPlugin.md  BluetoothPlugin.md  BrowserPlugin.md  CapturePlugin.md  CompositeInputPlugin.md  CompositionBufferPlugin.md  CompositionPlugin.md  ConfigurationPlugin.md  ContentDecryptionPlugin.md  ControlServicePlugin.md  CryptographyPlugin.md  DRMPlugin.md  DTVPlugin.md  DeviceDiagnosticsPlugin.md  DeviceInfoPlugin.md  DeviceOptimizeStateActivatorPlugin.md  DictionaryPlugin.md  DisplayInfoPlugin.md  DisplaySettingsPlugin.md  DolbyPlugin.md  FirmwareUpdatePlugin.md  FirmwareVersionPlugin.md  FocusPlugin.md  (+62 more)
(+168 files in other folders)
